Fix spacing for lists with no rights to add new tasks

--- a/src/styles/components/list.scss
+++ b/src/styles/components/list.scss
@@ -28,9 +28,13 @@
   }
 }
 
-.task-add .button {
-  padding: 10px 1rem;
-  height: 40px;
+.task-add {
+  padding: 1rem 1rem 0;
+  margin-bottom: 0;
+
+  .button {
+    height: 40px;
+  }
 }
 
 .list-title {
